@startuml
'https://plantuml.com/sequence-diagram

hide circle
skinparam classAttributeIconSize 0

class ReviewController {
    +getApprovedReviews(Long productId): List<Review>
}

class ReviewServiceImpl {
    +ReviewService(ReviewRepository revRepo)
    +findApprovedReviews(Long productId):List<Review>
}

interface ReviewService <<interface>> {
    +findApprovedReviews(Long productId): Iterable<Review>
}

class Review {
    -reviewId
    -text
    -rating
    -upvote
    -downvote
    -date/time
    -status
    -funnyFact
    Review(Long reviewId, String text, int rating, int upvote, int downvote, LocalDateTime date, String status, String funnyFact)
}

interface ReviewRepository <<interface>> {
    + findApprovedReviews(Long productId): List<Review>
}

ReviewController..>ReviewService
ReviewController..>Review
ReviewService..>ReviewServiceImpl
ReviewServiceImpl..>ReviewRepository
ReviewRepository "1" -right-> "0..*" Review:  records
@enduml
